pi/scripts/deltaquest_encryption/e-lite_server_end/how_to_reroute_via_iptables
# Add to the bottom of /etc/iptables.firewall.rules file. This permits the e-lite server to forward the connection into the e-lite server
*nat
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
# Nortech DeltaQuest Ports (change the 98.98.98.98 to the applicable Nortech DeltaQuest units local IPs)
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1001 -j DNAT --to-destination 98.98.98.98:10001
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1002 -j DNAT --to-destination 98.98.98.98:10002
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1003 -j DNAT --to-destination 98.98.98.98:10003
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1004 -j DNAT --to-destination 98.98.98.98:10004
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1005 -j DNAT --to-destination 98.98.98.98:10005
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1006 -j DNAT --to-destination 98.98.98.98:10006
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1007 -j DNAT --to-destination 98.98.98.98:10007
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1008 -j DNAT --to-destination 98.98.98.98:10008
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1009 -j DNAT --to-destination 98.98.98.98:10009
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1010 -j DNAT --to-destination 98.98.98.98:10010
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1011 -j DNAT --to-destination 98.98.98.98:10011
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1012 -j DNAT --to-destination 98.98.98.98:10012
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1013 -j DNAT --to-destination 98.98.98.98:10013
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1014 -j DNAT --to-destination 98.98.98.98:10014
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1015 -j DNAT --to-destination 98.98.98.98:10015
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1016 -j DNAT --to-destination 98.98.98.98:10016
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1017 -j DNAT --to-destination 98.98.98.98:10017
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1018 -j DNAT --to-destination 98.98.98.98:10018
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1019 -j DNAT --to-destination 98.98.98.98:10019
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1020 -j DNAT --to-destination 98.98.98.98:10020
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1021 -j DNAT --to-destination 98.98.98.98:10021
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1022 -j DNAT --to-destination 98.98.98.98:10022
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1023 -j DNAT --to-destination 98.98.98.98:10023
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1024 -j DNAT --to-destination 98.98.98.98:10024
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1025 -j DNAT --to-destination 98.98.98.98:10025
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1026 -j DNAT --to-destination 98.98.98.98:10026
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1027 -j DNAT --to-destination 98.98.98.98:10027
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1028 -j DNAT --to-destination 98.98.98.98:10028
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1029 -j DNAT --to-destination 98.98.98.98:10029
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1030 -j DNAT --to-destination 98.98.98.98:10030
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1031 -j DNAT --to-destination 98.98.98.98:10031
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1032 -j DNAT --to-destination 98.98.98.98:10032
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1033 -j DNAT --to-destination 98.98.98.98:10033
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1034 -j DNAT --to-destination 98.98.98.98:10034
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1035 -j DNAT --to-destination 98.98.98.98:10035
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1036 -j DNAT --to-destination 98.98.98.98:10036
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1037 -j DNAT --to-destination 98.98.98.98:10037
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1038 -j DNAT --to-destination 98.98.98.98:10038
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1039 -j DNAT --to-destination 98.98.98.98:10039
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1040 -j DNAT --to-destination 98.98.98.98:10040
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1041 -j DNAT --to-destination 98.98.98.98:10041
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1042 -j DNAT --to-destination 98.98.98.98:10042
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1043 -j DNAT --to-destination 98.98.98.98:10043
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1044 -j DNAT --to-destination 98.98.98.98:10044
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1045 -j DNAT --to-destination 98.98.98.98:10045
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1046 -j DNAT --to-destination 98.98.98.98:10046
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1047 -j DNAT --to-destination 98.98.98.98:10047
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1048 -j DNAT --to-destination 98.98.98.98:10048
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1049 -j DNAT --to-destination 98.98.98.98:10049
-A PREROUTING -s 127.0.0.1 -p tcp --dport 1050 -j DNAT --to-destination 98.98.98.98:10050
-A POSTROUTING -j MASQUERADE
COMMIT
